# yc-cofounder-bot

./: .coverage  .coverage.DESKTOP-L9V85UA.327322.XyfKqDxx.wgw1  .gitignore  .pre-commit-config.yaml  ACTUAL_REFACTORING_TARGETS.md  AGENTS.md  API_CONTRACT_RESPONSES.md  ARCHITECTURE_MERMAID.md  ARCHITECTURE_SIMPLIFIED.md  AUDIT_STATUS.md  CLAUDE.md  CLEANUP_COMPLETE.md  CODEBASE_AUDIT_FIXES.md  CODEBASE_FIXED_SUMMARY.md  CODE_ALIGNMENT_REPORT.md  CODE_AUDIT.md  CONTEXT7_FINAL_RESOLUTION.md  CONTEXT7_IMPLEMENTATION_SUMMARY.md  CONTEXT7_TRUTH.md  CONTEXT7_UPDATES.md  CRITICAL_FIXES_IMPLEMENTED.md  CRITICAL_UPDATE_SUMMARY.md  CUA_PLAYWRIGHT_RELATIONSHIP.md  CURRENT_COFOUNDER_PROFILE.MD  CURRENT_TEST_AUDIT.md  DEPRECATION_INDEX.md  DOCUMENTATION_CLEANUP_COMPLETE.md  FINAL_FIX_COMPLETE.md  FINAL_TEST_FIXES_REPORT.md  FINAL_TRUTH.md  FINDINGS_GPT5_MESSAGE_SENDING.md  FIXES_SUMMARY.md  FIX_SUMMARY.md  FULL_ALIGNMENT_COMPLETE.md  FULL_CODE_AUDIT.md  GPT5_API_AUDIT_AUG2025.md  GPT5_FACTS.md  GPT5_RESOLUTION_SUMMARY.md  GPT5_WORKING_FINAL.md  IMPLEMENTATION_DELTA_VS_TESTS.md  (+56 more)
.claude/: settings.local.json
.github/workflows/: ci-fixed.yml  ci-simple.yml  ci.yml  debug.yml  test-minimal.yml
archive_tests/: debug_message_flow.py  fix_message_flow.py  test_actual_flow.py  test_api_contract_e2e.py  test_auto_send_flow.py  test_complete_system.py  test_final_verification.py  test_full_flow_real.py  test_gpt5_blackbox.py  test_message_e2e.py  test_message_simple.py  test_send_debug.py  test_send_pipeline.py  test_simple_gpt5.py  test_temperature_fix_e2e.py
docs/: 01-product-brief.md  02-scope-and-requirements.md  03-architecture.md  04-implementation-plan.md  05-operations-and-safety.md  06-dev-environment.md  07-project-structure.md  08-testing-quality.md  09-roadmap.md  10-ui-reference.md  11-engineering-guidelines.md  12-prompts-and-rubric.md  API_CONTRACT_RESPONSES.md  MATCH_MESSAGE_TEMPLATE.MD  README.md  VENDOR_SOURCES.md  WEBSITE_LINK.MD  YC_UI_STRUCTURE.md  event_schema.md
docs/archive/: ACTION_PLAN.md  AGENTS.md  BROWSER_LOGIN_INVESTIGATION.md  CURRENT_STATE_ANALYSIS.md  HOW_IT_ACTUALLY_WORKS.md  HOW_IT_WORKS.md  INVESTIGATION.md  TEST_FAILURES_ANALYSIS.md  TEST_FIXES_COMPLETE.md
docs/archive-cleanup/: AI_ONLY_REFACTOR_PLAN.md  AI_ONLY_SIMPLIFICATION_COMPLETE.md  AUDIT_AND_PLAN.md  CANONICAL_TRUTH.md  CI_CD_DIFFERENTIAL_STRATEGY.md  COMPLETION_CHECKLIST.md  ERROR_HANDLING_IMPROVEMENTS.md  FIXES_SUMMARY.md  GPT5_FACTS.md  GPT5_RESOLUTION_SUMMARY.md  HACKER_NEWS_READINESS.md  IMPLEMENTATION_PLAN.md  INDEPENDENT_AUDIT_RESULTS.md  QUALITY_CHECK_REPORT.md  REFACTOR_PRIORITY_LIST.md  RELEASE_NOTES_v0.2.0.md  SYSTEMATIC_DEBUGGING_STRATEGY.md
docs/archive-planning/: CODEBASE_AUDIT.md  IMPLEMENTATION_ROADMAP.md  README.md  REFACTORING_STRATEGY.md
docs/archive-refactoring/: CRITICAL_UPDATE_SUMMARY.md  MODEL_SELECTION.md  OPENAI_CUA_IMPLEMENTATION.md  REAL_REFACTOR_SECTION_2_UI.md  REAL_REFACTOR_SECTION_3_DECISIONS.md  REAL_REFACTOR_SECTION_5_DI.md
docs/archive-wrong-refactor/: REFACTORING_PLAN.md  REFACTORING_PLAN_UPDATED.md  REFACTOR_PART_1_FOUNDATION.md  REFACTOR_PART_3_INTERFACE.md  REFACTOR_PART_4_VALIDATION.md
docs/fixes/: GPT5_REASONING_ONLY_FIX.md  GPT5_WORKING_FINAL.md  README.md  RESPONSES_API_MIGRATION.md  TEMPERATURE_FIX_FINAL.md  TIMEZONE_FIX.md  VERIFICATION_COMPLETE.md
docs/refactoring/: CURRENT_CODEBASE_AUDIT.md
schemas/: decision.schema.json
scripts/: README.md  check_models.py  fetch_vendor_docs.sh  run_full_test.py  test_decision_engine.py  test_gpt41.py  test_model_resolution.py
src/yc_matcher/: check_cua.py  config.py  decision.py  run_cli.py  storage.py  templates.py  ui_streamlit.py
tests/: manual_test_browser.py.skip  manual_test_full_chain.py.skip  test_browser_manual.py  test_cua_browser.py  test_decision.py  test_full_chain.py
tests/archived/: gpt5_response.json
tests/e2e/: README.md  test_autonomous_browsing.py  test_end_to_end_flow.py  test_real_send_flow.py  test_ui_browser_launch.py
tests/integration/: README.md  test_autonomous_flow.py  test_browser_port.py  test_browser_singleton.py  test_login_flow.py  test_marker_smoke.py  test_single_browser.py  test_sqlite_repo.py
tests/manual/: manual_app_flow.py  manual_browser_singleton.py  manual_full_automation.py  manual_full_flow.py  manual_monitor_automation.py  manual_test_cua_browser.py  manual_test_full_chain.py  manual_ui_browser_full.py  manual_ui_final.py  manual_ui_interactive.py  manual_visible_browser.py  test_app_flow.py  test_browser_singleton.py  test_full_automation.py  test_full_flow.py  test_monitor_automation.py  test_ui_browser_full.py  test_ui_final.py  test_ui_interactive.py  test_visible_browser.py
tests/unit/: README.md  helpers.py  test_ai_only_decision.py  test_autonomous_flow_modes.py  test_autonomous_happy_path.py  test_browser_port_sync.py  test_browser_safety.py  test_config.py  test_cua_async_safety.py  test_cua_session_hygiene.py  test_cua_toggle_fix.py  test_decision_modes.py  test_decision_modes.py.skip  test_di.py  test_di.py.skip  test_di_ai_only.py  test_duplicate_detection.py  test_event_ordering.py  test_schema.py  (+29 more)
(+60 files in other folders)
